# Riichi-Mahjong-judge

./: .gitignore  CMakeLists.txt  Mahjong.cpp  Mahjong1009.cpp  Mahjong2.cpp  MahjongJudgeFinal.cpp  Player.cpp  README.md  Yizhong.cpp  client.py  in.json  in_origin.json  ingang.json  mahjong.h  merge.py  out.cpp  发牌.txt
src/: Mahjong2.cpp  Tools.cpp  mahjong.h
备份/: Mahjong.cpp  Player.cpp  Tools.cpp  Yizhong.cpp  in.json  in1.json  mahjong.h  发牌.txt
